--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
     margin: 0 auto;
     margin-top: 100px;
     font-family: cursive;
+    overflow: scroll;
+    height: 300px;
 }
 #screen h1 {
     font-size: 4em;
@@ -29,4 +31,5 @@ body {
 }
 .collapse {
     display: none;
+    position: absolute;
 }
